--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -148,6 +148,9 @@
   "enabled": {
     "message": "Enabled"
   },
+  "enabled_dnr_rulesets": {
+    "message": "Enabled DNR rulesets"
+  },
   "essential": {
     "message": "Essential",
     "description": "Tracker category name"
@@ -158,6 +161,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "For more information read our full"
+  },
+  "further_protection": {
+    "message": "Further Protection"
   },
   "ghostery__action_required": {
     "message": "Ghostery: Action required"
@@ -338,6 +344,9 @@
   "read_more_on_whotracks_me": {
     "message": "Read more on WhoTracks.Me"
   },
+  "refresh": {
+    "message": "Refresh"
+  },
   "renew_ghostery_for_full_protection": {
     "message": "renew GHOSTERY for full protection"
   },
@@ -401,6 +410,9 @@
   "terms___conditions": {
     "message": "Terms & Conditions"
   },
+  "the_below_list_is_not_reactive_to_changes_made_in_the_extension__use_refresh_button": {
+    "message": "The below list is not reactive to changes made in the extension, use refresh button"
+  },
   "tired_of_cookie_popups_": {
     "message": "TIRED OF COOKIE POPUPS?"
   },
@@ -424,6 +436,9 @@
   },
   "trackers_wheel": {
     "message": "Trackers Wheel"
+  },
+  "tracking_prevention_on_search_engine_result_pages": {
+    "message": "Tracking Prevention on Search Engine Result Pages"
   },
   "unidentified": {
     "message": "Unidentified",
@@ -458,6 +473,12 @@
   },
   "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
     "message": "When pausing Ghostery on individual websites, those websites will appear here."
+  },
+  "while_using_a_non_private_search_engine_like_google__ghostery_detects_and_displays_trackers_even_before_you_visit_a_webpage_": {
+    "message": "While using a non-private search engine like Google, Ghostery detects and displays trackers even before you visit a webpage."
+  },
+  "while_using_a_non_private_search_engine_like_google_or_bing__ghostery_detects_and_displays_trackers_even_before_you_visit_a_webpage_": {
+    "message": "While using a non-private search engine like Google or Bing, Ghostery detects and displays trackers even before you visit a webpage."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "WhoTracks.Me, operated by Ghostery, is an integral part of Ghostery’s AI anti-tracking technology. It is a comprehensive global resource on trackers, bringing transparency to web tracking."
