--- a/extension-manifest-v3/src/_locales/ko/messages.json
+++ b/extension-manifest-v3/src/_locales/ko/messages.json
@@ -148,6 +148,9 @@
   "enabled": {
     "message": "활성화됨 "
   },
+  "enabled_dnr_rulesets": {
+    "message": "Enabled DNR rulesets"
+  },
   "essential": {
     "message": "필수 ",
     "description": "Tracker category name"
@@ -158,6 +161,9 @@
   },
   "for_more_information_read_our_full": {
     "message": "자세한 정보는 전문을 읽으시기 바랍니다"
+  },
+  "further_protection": {
+    "message": "Further Protection"
   },
   "ghostery__action_required": {
     "message": "Ghostery: 조치 필요"
@@ -338,6 +344,9 @@
   "read_more_on_whotracks_me": {
     "message": "WhoTracks.Me 자세히 보기"
   },
+  "refresh": {
+    "message": "Refresh"
+  },
   "renew_ghostery_for_full_protection": {
     "message": "완벽한 보호를 위해 GHOSTERY를 갱신하세요"
   },
@@ -401,6 +410,9 @@
   "terms___conditions": {
     "message": "사용 약관 "
   },
+  "the_below_list_is_not_reactive_to_changes_made_in_the_extension__use_refresh_button": {
+    "message": "The below list is not reactive to changes made in the extension, use refresh button"
+  },
   "tired_of_cookie_popups_": {
     "message": "쿠키 팝업이 너무 많습니까?"
   },
@@ -424,6 +436,9 @@
   },
   "trackers_wheel": {
     "message": "트래커 휠"
+  },
+  "tracking_prevention_on_search_engine_result_pages": {
+    "message": "Tracking Prevention on Search Engine Result Pages"
   },
   "unidentified": {
     "message": "알 수 없음",
@@ -458,6 +473,12 @@
   },
   "when_pausing_ghostery_on_individual_websites__those_websites_will_appear_here_": {
     "message": "개별 웹사이트에서 Ghostery를 일시 중지하면 해당 웹사이트가 여기 표시됩니다."
+  },
+  "while_using_a_non_private_search_engine_like_google__ghostery_detects_and_displays_trackers_even_before_you_visit_a_webpage_": {
+    "message": "While using a non-private search engine like Google, Ghostery detects and displays trackers even before you visit a webpage."
+  },
+  "while_using_a_non_private_search_engine_like_google_or_bing__ghostery_detects_and_displays_trackers_even_before_you_visit_a_webpage_": {
+    "message": "While using a non-private search engine like Google or Bing, Ghostery detects and displays trackers even before you visit a webpage."
   },
   "whotracks_me__operated_by_ghostery__is_an_integral_part_of_ghostery_s_ai_anti_tracking_technology__it_is_a_comprehensive_global_resource_on_trackers__bringing_transparency_to_web_tracking_": {
     "message": "Ghostery가 운영하는 WhoTracks.Me는 Ghostery의 AI 추적 방지 기술을 필수 부분으로 작동합니다. 이는 트래커에 대한 가장 포괄적인 글로벌 리소스로서 웹 추적에 투명성을 가져다 줍니다."
