--- a/extension-manifest-v3/src/_locales/en/messages.json
+++ b/extension-manifest-v3/src/_locales/en/messages.json
@@ -145,6 +145,9 @@
   "enable_new_setup": {
     "message": "Enable New Setup"
   },
+  "enable_now": {
+    "message": "Enable now"
+  },
   "enabled": {
     "message": "Enabled"
   },
@@ -154,6 +157,9 @@
   "essential": {
     "message": "Essential",
     "description": "Tracker category name"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
   },
   "extensions": {
     "message": "Extensions",
@@ -265,6 +271,9 @@
   "miscellaneous": {
     "message": "Miscellaneous",
     "description": "Tracker category name"
+  },
+  "more_ad_blocking_available": {
+    "message": "More ad blocking available"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "More information on $${0} methodology in Ghostery’s Manifesto."
