--- a/extension-manifest-v3/src/_locales/es/messages.json
+++ b/extension-manifest-v3/src/_locales/es/messages.json
@@ -145,6 +145,9 @@
   "enable_new_setup": {
     "message": "Activar nueva configuración"
   },
+  "enable_now": {
+    "message": "Enable now"
+  },
   "enabled": {
     "message": "Habilitado"
   },
@@ -154,6 +157,9 @@
   "essential": {
     "message": "Esencial",
     "description": "Tracker category name"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
   },
   "extensions": {
     "message": "Extensiones",
@@ -265,6 +271,9 @@
   "miscellaneous": {
     "message": "Miscelánea",
     "description": "Tracker category name"
+  },
+  "more_ad_blocking_available": {
+    "message": "More ad blocking available"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "Más información sobre la metodología $${0} en el Manifiesto de Ghostery."
