--- a/extension-manifest-v3/src/_locales/ja/messages.json
+++ b/extension-manifest-v3/src/_locales/ja/messages.json
@@ -145,6 +145,9 @@
   "enable_new_setup": {
     "message": "新規設定を有効にする"
   },
+  "enable_now": {
+    "message": "Enable now"
+  },
   "enabled": {
     "message": "有効になっています"
   },
@@ -154,6 +157,9 @@
   "essential": {
     "message": "必需",
     "description": "Tracker category name"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
   },
   "extensions": {
     "message": "拡張機能",
@@ -265,6 +271,9 @@
   "miscellaneous": {
     "message": "さまざまな",
     "description": "Tracker category name"
+  },
+  "more_ad_blocking_available": {
+    "message": "More ad blocking available"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "$${0}の方法論の詳細については、Ghostery's Manifestoに記載されています。"
