--- a/extension-manifest-v3/src/_locales/zh_TW/messages.json
+++ b/extension-manifest-v3/src/_locales/zh_TW/messages.json
@@ -145,6 +145,9 @@
   "enable_new_setup": {
     "message": "啟用新設定"
   },
+  "enable_now": {
+    "message": "Enable now"
+  },
   "enabled": {
     "message": "已啟用"
   },
@@ -154,6 +157,9 @@
   "essential": {
     "message": "基本內容",
     "description": "Tracker category name"
+  },
+  "expand_ghostery_ad_blocking_to_search_engines_in_a_few_easy_steps_": {
+    "message": "Expand Ghostery ad blocking to search engines in a few easy steps."
   },
   "extensions": {
     "message": "擴展",
@@ -265,6 +271,9 @@
   "miscellaneous": {
     "message": "各種各樣的",
     "description": "Tracker category name"
+  },
+  "more_ad_blocking_available": {
+    "message": "More ad blocking available"
   },
   "more_information_on_@_0__methodology_in_ghostery_s_manifesto_": {
     "message": "更多有關 Ghostery 宣言中 $${0} 方法的資訊。"
