--- a/extension-manifest-v3/src/_locales/fr/messages.json
+++ b/extension-manifest-v3/src/_locales/fr/messages.json
@@ -123,12 +123,18 @@
   "done": {
     "message": "Terminé"
   },
+  "due_to_browser_restrictions_and_additional_permissions_missing__ghostery_is_not_able_to_protect_you_": {
+    "message": "Due to browser restrictions and additional permissions missing, Ghostery is not able to protect you."
+  },
   "eliminates_ads_on_wesbites_for_safe_and_fast_browsing_": {
     "message": "Supprime les publicités sur les sites web pour une navigation sûre et rapide."
   },
   "email": {
     "message": "E-mail",
     "description": "Tracker category name"
+  },
+  "enable_ad_blocking_now": {
+    "message": "Enable Ad Blocking Now"
   },
   "enable_ghostery": {
     "message": "Activer Ghostery"
@@ -170,6 +176,9 @@
   },
   "further_protection": {
     "message": "Further Protection"
+  },
+  "get_help": {
+    "message": "Get help"
   },
   "ghostery__action_required": {
     "message": "Ghostery : action requise"
@@ -227,6 +236,9 @@
   },
   "help_ghostery_fight_for_a_web_where_privacy_is_a_basic_human_right_": {
     "message": "Aidez Ghostery à lutter pour un Web où la vie privée est un droit humain fondamental."
+  },
+  "hey__do_you_enjoy_ghostery_and_want_to_support_our_work_": {
+    "message": "Hey, do you enjoy Ghostery and want to support our work?"
   },
   "hosting": {
     "message": "Hébergement",
@@ -322,6 +334,10 @@
   },
   "on_this_website": {
     "message": "Sur ce site"
+  },
+  "other": {
+    "message": "Non-classés",
+    "description": "Tracker category name"
   },
   "pause_on_this_site": {
     "message": "Pause sur ce site"
